home/home.css
/* ... */
.profile-cart ul li a{
    color: var(--qora);
}


.main-menu{
    width: 100%;
    height: 60px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 50px 0 50px;
}
.main-menu .logo{
    font-weight: bold;
    display: flex;
    justify-content: center;
    align-items: center;
}
.main-menu .logo a{
    font-size: 14px;
    margin-left: 4px;
    color: var(--qora);
}
.main-menu .main-menu-options{
    position: relative;
}
.main-menu .main-menu-options ul{
    display: flex;
    justify-content: center;
    align-items: center;
}
.main-menu .main-menu-options ul li{
    margin-left: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.main-menu .main-menu-options ul li a{
    font-size: 16px;
    color: var(--qora);
    transition: 0.2s;
}
.main-menu .main-menu-options ul li a.active-link{
    color: var(--havorang);
}
.main-menu .main-menu-options ul li a:hover{
    color: var(--havorang)
}


/* Main - Sardor (21.12.2022 14:38) */
    .bg-image {
        height: 90vh;
        background-image: url("./images/product-images/main-image.png");
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
    }
    .main-text {
        font-size: 2.5rem;
        color: #fff;
        padding-top: 300px;
    }
    .new-products__row {
        display: flex;
        justify-content: center;
    }
    .new-products__item{
        margin-top: -100px;
        background-color: #fff;
        border-radius: 5px;
        width: 33.33%;
        position: relative;
    }
    .new-products__item > img {
        max-width: 100%;
        height: 100%;
    }
    .product-description {
        position: absolute;
        text-transform: uppercase;
        top: 30px;
        left: 50px;
        font-weight: 800;
        font-size: 1.2em;
        color: #223263;
    }
    /* Best sellers */
    .best-seller-mobile-title, .slider, .time {
        display: none;
    }

    .best-seller {
        margin: 0 auto;
        text-align: center;
    }
    .best-seller__nav-items {
        display: flex;
        flex-direction: row;
        justify-content: center;
        column-gap: 50px;
    }
    .best-seller__nav-item > a{
        color: var(--qora);
    }
    .best-seller__nav-item > a:hover{
        border-bottom: 3px solid var(--havorang);
        transition: all 0.1s ease;
        color: var(--havorang);
    }

    .best-seller__products{
        margin: 0 auto;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }
    .best-seller__product {
        width: 250px;
        padding: 10px;
        margin: 10px 0;
        position: relative;
        border: 1px solid #F6F6F6;
        border-radius: 5px;
    }
    .best-seller__product:hover .hover-image {
        opacity: 0.1;
        transition: all 0.1s ease-in-out;
    }
    .best-seller__product:hover .product-hover{
        display: block;
        transition: all 0.5s ease;
    }
    .product-hover > a > img{
        width: 20px;
        aspect-ratio: 1;
        margin: 15px;
    }
    .product-hover {
        display: none;
        position: absolute;
        top: 25%;
        left: 30%;
    }
    .best-seller__product img {
        width: 95%;
        margin: 0 auto;
    }

    div.rates img{
        width: 20px;
    }
    .price {
        color:#40BFFF;
        font-size: 1rem;
    }
    .real-price {
        font-size: 0.8rem;
        color: gray;
        font-weight: 200;
        padding: 0 10px;
    }
    .discount {
        color: #FB7181;
        font-size: 0.9rem;
    }
    .load-more > a{
        color: var(--havorang);
        border-bottom: 3px solid var(--havorang);
    }


/* /Main */
.footer{
    width: 100%;
    height: auto;
    margin-top: 30px;
    background-color: var(--moviy);
    padding: 0 50px 0 50px;
}
.footer .upper-footer, .footer .lower-footer{
    display: flex;
    justify-content: space-around;
    flex-wrap: nowrap;
    margin-bottom: 20px;
    padding: 20px 0;
}
.footer .upper-footer .footer-info,
 .footer .lower-footer .footer-info{
    display: flex;
    flex-direction: column;
    width: 120px;
}
.footer .upper-footer .footer-info:first-child{
    width: 200px;
}
.footer .upper-footer .footer-info a, p, h3{
    color: var(--qora);
}
.footer .upper-footer .footer-info .footer-logo a{
    font-size: 1.1rem;
    font-weight: 600;
}
.footer .upper-footer .footer-info p,
 .footer .lower-footer .footer-info p{
    font-size: 12px;
}
.footer .upper-footer .footer-info .footer-social i{
    margin-right: 10px;
}
.footer .upper-footer .footer-info .footer-social i.fa-facebook-f{
    color: #054b6e;
}
.footer .upper-footer .footer-info .footer-social i.fa-twitter{
    color: #127cb1;
}

.main-menu .main-menu-options #check,
.main-menu .main-menu-options label .fa-bars-staggered,
.main-menu .main-menu-options label .fa-xmark{
    display: none;
}
.mobile-bottom-nav{
    display: none;
}
/* Sardor vaqtincha yozdi */
.image > img{
    width: 100%;
}



@media screen and (min-width: 769px){
    .time, .slider, .best-seller-mobile {
        display: none;
    }
    .product-description {
        top: 5px;
        left: 5px;
    }
    .best-seller__product{
        width: 24%;
    }
    .mobile-add-image {
        display: none;
    }
}
/* ... */

